<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.goldenesystem.appsi.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:layout_margin="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/lblName"
                android:textSize="20sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/edtNome"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>

            <ImageButton
                android:id="@+id/btnScanNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/lblAge"
                android:textSize="20sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/edtIdade"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"/>
            <ImageButton
                android:id="@+id/btnScanIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/lblAddress"
                android:textSize="20sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/edtEndereco"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"/>
            <ImageButton
                android:id="@+id/btnScanEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/lblCity"
                android:textSize="20sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/edtCidade"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"/>
            <ImageButton
                android:id="@+id/btnScanCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/lblState"
                android:textSize="20sp"
                android:gravity="end"/>
            <EditText
                android:id="@+id/edtEstado"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                android:textAllCaps="true"/>
            <ImageButton
                android:id="@+id/btnScanEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_scan"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnGravar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/btnGravar"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
